--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
+    "chart.js": "^4.5.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
