--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@angular/common": "^19.2.7",
     "@angular/compiler": "^19.2.7",
     "@angular/core": "^19.2.7",
+    "@angular/fire": "^19.2.0",
     "@angular/forms": "^19.2.7",
     "@angular/platform-browser": "^19.2.7",
     "@angular/platform-browser-dynamic": "^19.2.7",
@@ -26,6 +27,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "firebase": "^11.10.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.10",
