--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
-    "@ng-select/ng-select": "18.0.0",
+    "@ng-select/ng-select": "^14.1.0",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
