--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.13.1",
     "chart.js": "^4.5.0",
+    "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
