feat(ui): add CV preview functionality
Add preview modals for uploaded CVs in resume and job application components, supporting PDF and DOCX formats using ngx-extended-pdf-viewer and mammoth library. Includes responsive modal styling, error handling for unsupported files, and minor code formatting improvements in auth service.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
+    "mammoth": "^1.11.0",
     "ngx-extended-pdf-viewer": "^25.6.4",
     "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
